Add FAQ entry about hosting transparency

--- a/index.html
+++ b/index.html
@@ -423,6 +423,10 @@
                         <h3>Is this a business?</h3>
                         <p>Sjiits exist to spread joy, not to chase profit. Any surplus has previously supported the local church’s Christmas aid for families in need along with other community initiatives, and it’s important to keep that spirit alive.</p>
                     </div>
+                    <div>
+                        <h3>How do you keep the site running?</h3>
+                        <p>I aim to operate the site as inexpensively and transparently as possible. The code is public on GitHub and the site itself is hosted on GitHub Pages. The only direct cost is the .eu domain, chosen to keep expenses low, with Cloudflare handling DNS.</p>
+                    </div>
                 </div>
             </div>
         </section>
