Update footer link to LinkedIn

--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
 
     <footer>
         <div class="wrapper">
-            <p>© <span id="year"></span> Sjiits · Crafted by Yding3DPrint / Steffen Brandsborg. Keep the laughs rolling.</p>
+            <p>© <span id="year"></span> Sjiits · Crafted by <a href="https://yding3dprint.dk" target="_blank" rel="noopener noreferrer">Yding3DPrint</a> / <a href="https://www.linkedin.com/in/brandsborg/" target="_blank" rel="noopener noreferrer">Steffen Brandsborg</a>. Keep the laughs rolling.</p>
         </div>
     </footer>
 
