Simplify wording across FAQ and creator sections

--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
             <div class="wrapper creator">
                 <div>
                     <h2>Meet the maker</h2>
-                    <p class="intro-text">Sjiits are dreamed up by <strong>Steffen Brandsborg</strong>. Through his Danish hobby venture Yding3DPrint, Steffen mixes 3D printing nerdery with a love for oddball experiences that brighten everyday life.</p>
+                    <p class="intro-text">Sjiits are made by <strong>Steffen Brandsborg</strong>. Through his Danish hobby venture Yding3DPrint, Steffen mixes 3D printing nerdery with a love for oddball experiences that brighten everyday life.</p>
                     <div class="social-links">
                         <a href="https://www.instagram.com/yding3dprint/" target="_blank" rel="noopener">Instagram · Yding3DPrint</a>
                         <a href="https://yding3dprint.dk/" target="_blank" rel="noopener">Website · Yding3DPrint</a>
@@ -470,8 +470,8 @@
                 </div>
                 <figure>
                     <h3>A community of giggles</h3>
-                    <p>Sjiits are about delighting someone for a split second—then letting the story keep travelling. Each pass adds another grin to the map, and now you’re part of it.</p>
-                    <figcaption>Share your discoveries with <strong>#sjiits</strong> and tag <strong>@Sjiits</strong> so we can amplify the fun and spotlight the unexpected hiding places.</figcaption>
+                    <p>Sjiits are about delighting someone for a split second—then letting the story keep travelling. Each pass adds another smile to the map, and now you’re part of it.</p>
+                    <figcaption>Share your discoveries with <strong>#sjiits</strong> and tag <strong>@Sjiits</strong> so we can share the fun and spotlight the unexpected hiding places.</figcaption>
                 </figure>
             </div>
         </section>
@@ -482,19 +482,19 @@
                 <div class="faq">
                     <div>
                         <h3>Should I keep or pass on my Sjiit?</h3>
-                        <p>Totally your call. Lots of people keep the first Sjiit of each type as a trophy and let the rest roam. That way you can track the tale while helping the mischief spread.</p>
+                        <p>Totally your call. Lots of people keep the first Sjiit of each type as a trophy and let the rest roam. That way you can follow the story while helping the joke keep going.</p>
                     </div>
                     <div>
                         <h3>Are more designs coming?</h3>
-                        <p>Absolutely. New limited editions drop around holidays and special events. Follow Yding3DPrint to be first in line for fresh prints.</p>
+                        <p>Absolutely. New limited editions drop around holidays and special events. Follow Sjiits to be first in line for fresh prints.</p>
                     </div>
                     <div>
                         <h3>How do I get more Sjiits?</h3>
-                        <p>Watch social announcements and the Makerworld profile for drops. You can reach out to Steffen if you want to join the prank wave, or even print them yourself or team up with someone who can. You can’t sell Sjiits without a license, and even with one we keep the price low, around €0.50 each, so they stay an accessible prank.</p>
+                        <p>Watch social announcements and the Makerworld profile for drops. You can reach out to Steffen if you want to join the fun, or even print them yourself or team up with someone who can. You can’t sell Sjiits without contacting me, and even then we keep the price low, around €0.25–€0.50 each, so they stay an accessible prank.</p>
                     </div>
                     <div>
                         <h3>Where do I find printing details?</h3>
-                        <p>Every Makerworld listing includes the print recipes. Please stick to the recommended touches like glittery or glow in the dark filament so the more intricate designs feel special while the simple ones stay common. I can’t dictate which Sjiits end up common, rare, epic, or mythical because that should flow naturally from the build complexity. It’s not meant to lock anyone out, just to add an extra collecting dimension.</p>
+                        <p>You can find the print details on Makerworld. The filament choice is flexible and should match the idea of each model, but the shape is what really matters. I can’t dictate which Sjiits end up common, rare, epic, or mythical because that should flow naturally from the build complexity. It’s not meant to lock anyone out, just to add an extra collecting dimension.</p>
                     </div>
                     <div>
                         <h3>Why isn’t there a number on the model?</h3>
